sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echanges:Boolean=true;
  var n:Int= data.length
  while(echanges==true){
    echanges=false;
    for(i<-0 to length-1){
    	if (isSmaller(i+1,i)){
        echanges=true
      	swap(i,i+1)
    	}
  	}
	}
}

